syntax = "proto3";

enum MsgColumnType {
  INT32 = 0;
  FLOAT32 = 1;
  STRING = 2;
  BOOL = 3;
}

message MsgColumnData {
  oneof value {
    int32 i = 1;
    float f = 2;
    string s = 3;
    bool b = 4;
  }
}

message MsgRowData {
  repeated MsgColumnData columns = 1;
}

message MsgColumnScheme {
  string name = 1;
  MsgColumnType type = 2;
}

message MsgTableScheme {
  string name = 1;
  repeated MsgColumnScheme columns = 2;
}

message MsgColumnReference {
  string table = 1;
  string column = 2;
}